Fixed tests for (cleanup of orphans directory supplied files when directory contains subfolders).